package Controlador;

public interface Controller {
}
