@startuml

title __CONTROLADOR's Class Diagram__\n

  namespace  {
    namespace ontrolador {
      interface Controlador.Controller {
      }
    }
  }
  

  namespace  {
    namespace ontrolador {
      class Controlador.LaLigaController {
          + LaLigaController()
          + LaLigaController()
          + getAllMatchesFromTeam()
          + getAllPlayersFromTeam()
          + getMapNumberPlayersPosition()
          + getMatchByID()
          + getTeamByID()
          + getTeamList()
          + getVista()
          + setNewTeamToShow()
          + setTeamToShow()
          - getStatsFromTeam()
      }
    }
  }
  

  namespace  {
    namespace ontrolador {
      class Controlador.prueba {
          {static} + main()
      }
    }
  }
  

  Controlador.LaLigaController .up.|> Controlador.Controller
  Controlador.LaLigaController o-- Vista.ViewFacade : fachadaVista
  Controlador.LaLigaController o-- Modelo.LaLigaModel : modelo
  Controlador.LaLigaController o-- Modelo.Team : teamToShow
  Controlador.LaLigaController o-- Vista.LaLigaView : vista


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
